--- a/tutorial.html
+++ b/tutorial.html
@@ -28,22 +28,25 @@
 <ul>
 <li><p>Instalar Ruby</p>
 
-<p><ol>
-<li>Con RVM podemos tener varias versiones de Ruby instaladas. Instalaremos la 2.0.0</p>
+<ol>
+<li>Con RVM podemos tener varias versiones de Ruby instaladas. Instalaremos la 2.0.0</li>
+</ol></li>
+</ul>
 
 <blockquote>
   <blockquote>
   <p><strong><em>$ rvm install 2.0.0</em></strong></p>
 
-<p>Si tenemos varias versiones instaladas, con el comando <strong><em>[[$ rvm use ruby "NUM_VERSION" --default]]</em></strong>  nos pasaremos a la version que queramos utilizar.
-Con el comando <strong><em>[[$ rvm list]]</em></strong> veremos las versiones de Ruby instaladas</p>
+<p>Si tenemos varias versiones instaladas, con el comando <strong><em>[[$ rvm use ruby "NUM_VERSION" --default]]</em></strong>  nos pasaremos a la version que queramos utilizar.</p>
 
-<p><img src="./02.jpeg" alt="Alt text" title="" />
-</li>
-</ol></p>
+<p>Con el comando <strong><em>[[$ rvm list]]</em></strong> veremos las versiones de Ruby instaladas</p>
+
+<p><img src="./02.jpeg" alt="Alt text" title="" /></p>
 </blockquote>
 
-<p></blockquote></p></li>
+<p></blockquote></p>
+
+<ul>
 <li><p>Actualizar gemas</p>
 
 <ol>
@@ -52,23 +55,21 @@ Con el comando <strong><em>[[$ rvm list]]</em></strong> veremos las versiones de
 </ol></li>
 <li><p>Instalar y comprobar la gema Sinatra.</p>
 
-<p><ol>
+<ol>
 <li><strong><em>$ gem install sinatra</em></strong></li>
-<li>Creamos el fichero "myapp.rb"</p>
-
-<blockquote>
-  <blockquote>
-  <p><img src="./03.jpeg" alt="Alt text" title="" />
-</li>
-<li>Ejecutamos <strong><em>[[$ ruby myapp.rb]]</em></strong> y pruebo en el navegador: <strong><em>[[http://localhost:4567]]</em></strong></li>
-</ol></p>
-</blockquote>
-
-<p></blockquote></p></li>
+<li>Creamos el fichero "myapp.rb"</li>
+</ol></li>
 </ul>
 
 <blockquote>
   <blockquote>
+  <p><img src="./03.jpeg" alt="Alt text" title="" /></p>
+</blockquote>
+
+<pre><code>3. Ejecutamos ***[[$ ruby myapp.rb]]*** y pruebo en el navegador: ***[[http://localhost:4567]]***
+</code></pre>
+
+<blockquote>
   <p><img src="./04.jpeg" alt="Alt text" title="" /></p>
 </blockquote>
 
