--- a/tutorial.html
+++ b/tutorial.html
@@ -53,6 +53,11 @@
 <li><strong><em>$ gem update --system</em></strong></li>
 <li><strong><em>$ gem sources -a http://gemcutter.org</em></strong></li>
 </ol></li>
+<li><p>Instalar gem Twitter.</p>
+
+<ol>
+<li><strong><em>$ gem install twitter</em></strong></li>
+</ol></li>
 <li><p>Instalar y comprobar la gema Sinatra.</p>
 
 <ol>
