--- a/tutorial.html
+++ b/tutorial.html
@@ -1,10 +1,10 @@
-<h1>Tutorial </h1>
+<h1>Tutorial - Instalacion RVM/RUBY</h1>
 
 <ul>
 <li><p>Instalar RVM</p>
 
 <ol>
-<li><p>Antes de instalar RVM necesitaremos instalar unos paquetes:</p>
+<li><p>Antes de instalar RVM necesitaremos instalar algunos paquetes:</p>
 
 <blockquote>
   <blockquote>
@@ -79,3 +79,5 @@
 </blockquote>
 
 <p></blockquote></p>
+
+<p>Jhoanmary Prz Fariña</p>
