--- a/tutorial.html
+++ b/tutorial.html
@@ -71,10 +71,13 @@
   <p><img src="./03.jpeg" alt="Alt text" title="" /></p>
 </blockquote>
 
+<p></blockquote></p>
+
 <pre><code>3. Ejecutamos ***[[$ ruby myapp.rb]]*** y pruebo en el navegador: ***[[http://localhost:4567]]***
 </code></pre>
 
 <blockquote>
+  <blockquote>
   <p><img src="./04.jpeg" alt="Alt text" title="" /></p>
 </blockquote>
 
