--- a/tutorial.html
+++ b/tutorial.html
@@ -18,7 +18,7 @@
 
 <blockquote>
   <blockquote>
-  <p><img src="./01.jpeg" alt="Alt text" title="" /></p>
+  <p><img src="./images/01.jpeg" alt="Alt text" title="" /></p>
 
 <p>Podemos ver la version de RVM con el comando <strong><em>"rvm -v"</em></strong></p>
 </blockquote>
@@ -41,7 +41,7 @@
 
 <p>Con el comando <strong><em>[[$ rvm list]]</em></strong> veremos las versiones de Ruby instaladas</p>
 
-<p><img src="./02.jpeg" alt="Alt text" title="" /></p>
+<p><img src="./images/02.jpeg" alt="Alt text" title="" /></p>
 </blockquote>
 
 <p></blockquote></p>
@@ -68,7 +68,7 @@
 
 <blockquote>
   <blockquote>
-  <p><img src="./03.jpeg" alt="Alt text" title="" /></p>
+  <p><img src="./images/03.jpeg" alt="Alt text" title="" /></p>
 </blockquote>
 
 <p></blockquote></p>
@@ -78,7 +78,7 @@
 
 <blockquote>
   <blockquote>
-  <p><img src="./04.jpeg" alt="Alt text" title="" /></p>
+  <p><img src="./images/04.jpeg" alt="Alt text" title="" /></p>
 </blockquote>
 
 <p></blockquote></p>
